Added htaccess, robots files, honeypots, Finished the error pages stub, Attempted to fix form security issue Update .dockerignore, .gitignore, and 14 more files...

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
+# IDE-related folders
 .idea/
-.htaccess
-files/
-content/page/
+
+# Static resources
 resources/Azias/imgs/*.exe
 resources/Azias/imgs/*.url
 resources/ChartJs/
@@ -10,3 +10,7 @@ resources/GoogleFonts/
 resources/HalfMoon/
 resources/Icons8/
 resources/Quantum/
+
+# Other folders
+content/page/
+files/
